# pyturbogrid

./: #pyproject.toml#  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  AxialFanMultiRow.tginit  AxialFanMultiRow.x_b  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  TurboGridLog.txt  index.html  pyproject.toml  release-please-config.json  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: automation.yml  ci.yml  ci_cd.yml  label.yml  release-please.yml  release_private.yml
doc/: .vale.ini  Makefile  make.bat
doc/source/: conf.py  contributing.rst  index.rst
doc/source/_templates/: README.md
doc/source/api_reference/: index.rst  launcher.rst  mesh_statistics.rst  ndf_parser.rst  pyturbogrid_core.rst
doc/source/getting_started/: functions.rst  index.rst
doc/styles/: .gitignore
examples/: README.rst  basic_read_inf_rotor37.py  mbr_STAC_Example.py  mbr_from_tginit_example.py  mbr_process_playground.py  mbr_sweep_example.py  mesh_statistics_report.py  multi_blade_row_batch_example.py  multi_blade_row_example.py  read_inf_rotor37.py  report_template.html
examples/STAC/: MBR.py  R0.inf  R1.inf  S0.inf  S1.inf
examples/STAC/R0/: TS-5_hub.crv
examples/STAC/R1/: TS-3_hub.crv  TS-3_shroud.crv
examples/STAC/S0/: TS-4_hub.crv  TS-4_shroud.crv
examples/mesh_gen/: README.rst  basic_read_inf_rotor37.py
examples/mesh_stats_reports/: README.rst  mesh_statistics_report.py
requirements/: requirements_doc.txt
tests/: DeployTGContainer.py  conftest.py  test_inf_parser.py  test_launcher.py  test_mesh_statistics.py  test_metadata.py  test_multi_blade_row  test_multi_blade_row.py
tests/STAC/: R0.inf  R1.inf  S0.inf  S1.inf  STAC.TGMachine
tests/STAC/R0/: TS-5_profile.crv  TS-5_shroud.crv
tests/STAC/R1/: TS-3_hub.crv  TS-3_profile.crv  TS-3_shroud.crv
tests/STAC/S0/: TS-4_hub.crv  TS-4_profile.crv  TS-4_shroud.crv
tests/STAC/S1/: TS-1_hub.crv  TS-1_profile.crv  TS-1_shroud.crv
tests/mbr/5_stage_hannover/: 0_IGV_Vane.crv  0_IGV_Vane.inf  1_Rotor1_Blade.crv  1_Rotor1_Blade.inf  2_Stator1_Vane.crv  2_Stator1_Vane.inf  3_Rotor2_Blade.crv  3_Rotor2_Blade.inf  4_Stator2_Vane.crv  4_Stator2_Vane.inf  5_Rotor3_Blade.crv  5_Rotor3_Blade.inf  5_stage_hannover.TGMachine  6_Stator3_Vane.crv  6_Stator3_Vane.inf  7_Rotor4_Blade.crv  7_Rotor4_Blade.inf  8_Stator4_Vane.crv  8_Stator4_Vane.inf  Case Attribution.txt  hub.crv  shroud.crv
tests/ndf/: AxiFan-01A-MultiRow.ndf  AxialFanMultiRow.ndf
tests/rotor37/: BladeGen.inf  Rotor37State.tst  hub.curve  profile.curve  shroud.curve
tests/sfp/: RadTurbine.tginit  RadTurbine.x_b
version/: index.html
version/0.0/: .buildinfo  announcement.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.0/api_reference/: announcement.html  index.html  launcher.html  mesh_statistics.html  pyturbogrid_core.html
version/0.0/examples/: basic_read_inf_rotor37.html  index.html  mesh_statistics_report.html
version/0.0/getting_started/: index.html
version/0.4/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.4/_static/: search.json
version/0.4/api_reference/: index.html  launcher.html  mesh_statistics.html  multi_blade_row.html  ndf_parser.html  pyturbogrid_core.html
version/0.4/examples/: basic_read_inf_rotor37.html  index.html  mbr_from_tginit_example.html  mbr_sweep_example.html  mesh_statistics_report.html  multi_blade_row_batch_example.html  multi_blade_row_example.html  sg_execution_times.html
version/0.4/getting_started/: index.html
version/0.5/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.5/_static/: documentation_options.js  search.json
version/0.5/api_reference/: index.html  launcher.html  mesh_statistics.html  multi_blade_row.html  ndf_parser.html  pyturbogrid_core.html
version/0.5/examples/: announcement.html  basic_read_inf_rotor37.html  index.html  mbr_STAC_Example.html  mbr_from_tginit_example.html  mbr_sweep_example.html  mesh_statistics_report.html  multi_blade_row_batch_example.html  sg_execution_times.html
version/0.5/getting_started/: index.html
version/0.6/: index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.6/_sources/: index.rst.txt
version/0.6/_static/: search.json
version/0.6/api_reference/: index.html  launcher.html  mesh_statistics.html  multi_blade_row.html  ndf_parser.html
version/0.6/examples/: index.html  mbr_STAC_Example.html  mbr_sweep_example.html  mesh_statistics_report.html
version/0.6/getting_started/: index.html
version/0.7/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.7/_static/: search.json
version/0.7/api_reference/: index.html  launcher.html  mesh_statistics.html  multi_blade_row.html  ndf_parser.html  pyturbogrid_core.html
version/0.7/examples/: announcement.html  basic_read_inf_rotor37.html  index.html  mbr_STAC_Example.html  mbr_from_tginit_example.html  mbr_sweep_example.html  mesh_statistics_report.html  multi_blade_row_batch_example.html  sg_execution_times.html
version/0.7/getting_started/: index.html
version/0.9/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.9/api_reference/: index.html  launcher.html  mesh_statistics.html  multi_blade_row.html  ndf_parser.html  pyturbogrid_core.html
version/0.9/examples/: index.html  (+5 more)
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
(+145 files in other folders)
