[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-turbogrid-core"
version = "0.4.dev0"
description = "A python wrapper for Ansys TurboGrid"
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}

authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ansys-turbogrid-api>=0.4.dev1",
    "matplotlib>=3.5.1",
    "importlib-metadata>=4.0",
]

[project.optional-dependencies]
tests = [
    "matplotlib>=3.5.1",
    "pytest==7.2.2",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==0.9.9",
    "autodocsumm==0.2.11",
    "ipyvtklink==0.2.3",
    "jupyter_sphinx==0.4.0",
    "jupytext==1.14.6",
    "nbconvert==7.6.0",
    "nbsphinx==0.9.2",
    "notebook==6.5.4",
    "numpydoc==1.5.0",
    "panel==1.1.1",
    "Sphinx==7.0.1",
    "sphinx-autoapi==2.1.1",
    "sphinx-autodoc-typehints==1.23.2",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.13.0",
]

[project.urls]
Source = "https://github.com/ansys/pyturbogrid"
Homepage = "https://turbogrid.docs.pyansys.com"
Documentation = "https://turbogrid.docs.pyansys.com/version/stable/"
Tracker = "https://github.com/ansys/pyturbogrid/issues"

[tool.flit.module]
name = "ansys.turbogrid.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[[tool.poetry.source]]
name = "privatepypi"
url = "https://pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
ansys-turbogrid-api = {source = "privatepypi"}


[tool.coverage.run]
source = ["ansys.turbogrid.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.turbogrid.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = [
    "tests",
]
