[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansys-turbogrid-core"
version = "0.4.2"
description = "A python wrapper for Ansys TurboGrid"
readme = "README.rst"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
repository = "https://github.com/ansys/pyturbogrid"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [{ include = "ansys", from = "src" }]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pyansys-private-pypi"
url = "https://pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = ">=3.5.1"
importlib-metadata = ">=4.0"
fabric = ">=3.2.2"
Jinja2 = ">=3.1.2"
ansys-turbogrid-api = ">=0.4.4"
# ansys-turbogrid-api = { path = "../ansys-api-turbogrid/", develop = true } # Uncomment this if you have access to a local repo
toml = "0.10.2"                                                            # This should be picked up from ansys-turbogrid-api once its lock file is updated
pyvista = ">=0.43.8,<0.45.0"
pyyaml = "^6.0.2"
deepdiff = "^8.4.2"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
ansys-sphinx-theme = ">=0.15.2"
autodocsumm = ">=0.2.12"
ipyvtklink = ">=0.2.3"
jupyter_sphinx = ">=0.5.3"
jupytext = ">=1.16.1"
nbconvert = ">=7.16.3"
nbsphinx = ">=0.9.3"
notebook = ">=7.1.2"
numpydoc = ">=1.7.0"
panel = ">=1.4.1"
Sphinx = "==7.4.7"
sphinx-autoapi = ">=3.0.0"
sphinx-autodoc-typehints = ">=2.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-gallery = ">=0.15.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
matplotlib = " >=3.5.1"
pytest = ">=8.1.1"
pytest-cov = ">=5.0.0"
pytest-xdist = ">=3.6.0"

[tool.poetry.urls]
Source = "https://github.com/ansys/pyturbogrid"
Homepage = "https://turbogrid.docs.pyansys.com"
Documentation = "https://turbogrid.docs.pyansys.com/version/stable/"
Tracker = "https://github.com/ansys/pyturbogrid/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.codespell]
skip = "poetry.lock"

[tool.coverage.run]
source = ["ansys.turbogrid.core"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.turbogrid.core --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = ["tests"]
